--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pimouse_vision_control
-#  CATKIN_DEPENDS cv_bridge pimouse_ros roscpp rospy sensor_msgs std_msgs
+  CATKIN_DEPENDS cv_bridge pimouse_ros roscpp rospy sensor_msgs std_msgs
 #  DEPENDS system_lib
 )
 
